Bug 101058 - Libreoffice crashing on table line deletion
Summary: Libreoffice crashing on table line deletion
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.1.3.2 release
Hardware: All All
: high major
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0 target:5.2.1
Keywords: haveBacktrace
Depends on:
Blocks:
 
Reported: 2016-07-21 12:22 UTC by Stefan Schmaltz
Modified: 2016-08-21 11:39 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
crashing document (576.78 KB, application/vnd.oasis.opendocument.text)
2016-07-21 12:22 UTC, Stefan Schmaltz
Details
bt with symbols (9.60 KB, text/plain)
2016-07-23 10:53 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stefan Schmaltz 2016-07-21 12:22:45 UTC
Created attachment 126343 [details]
crashing document

Attached you find a document that causes LibreOffice to crash (SEH Exception)
How to reproduce
1. Open attached document
2. go to line "IS - Arbeiten an der Härte und Ultraschall Prüfanlage im Bau 124"
3. Klick on "delete line" / table toolbar
Comment 1 MM 2016-07-21 20:50:04 UTC
Confirmed with v5.1.5.1 under ubuntu 16.04 x64.
Confirmed with v5.1.5.1 under windows 7 x64.
Unconfirmed with v5.2.0.2 under ubuntu 16.04 x64.

With v5.1 selecting 'delete rows', 'delete columns' or 'delete table' it crashes, but not with v5.2
Comment 2 Julien Nabet 2016-07-23 10:53:21 UTC
Created attachment 126373 [details]
bt with symbols

On pc Debian x86-64 with master sources updated yesterday, I could reproduce this.

I attached a bt with symbols.
Comment 3 Caolán McNamara 2016-07-23 20:52:01 UTC
This appears to be a regression from...

commit 15d8b51bf82610c663f80fe552a1c0315e137ad3
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Tue Feb 5 17:33:49 2013 +0000

    Resolves: rhbz#907933 crash on removing second last para in cell...
    
    if (basically) the last para is on next page
Comment 4 Commit Notification 2016-07-24 07:52:18 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e22122e20ca69d0f2b0e8831e9ebf3afd2064329

Resolves: tdf#101058 crash on deleting certain table row

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Julien Nabet 2016-07-24 09:35:13 UTC
With master sources updated today, I don't reproduce this.
Thank you Caolán! :-)
I propose to put this one to RESOLVED/FIXED, then VERIFIED/FIXED unless you want first to backport the patch on 5.2 and 5.1 branches.
Comment 6 Commit Notification 2016-07-25 07:38:28 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=46494be0b4cfc472bcd8da19833bc12c6723d1b2&h=libreoffice-5-2

Resolves: tdf#101058 crash on deleting certain table row

It will be available in 5.2.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.