Resolves: tdf#101058 crash on deleting certain table row

regression from...

commit 15d8b51bf82610c663f80fe552a1c0315e137ad3
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Tue Feb 5 17:33:49 2013 +0000

    Resolves: rhbz#907933 crash on removing second last para in cell...

    if (basically) the last para is on next page

so revert that and try a different fix which now works to keep the original
problem crash-free and fix this one too

Change-Id: Ia6b3ef48c43ceceb7ee7cc2b8b803314349f3785